# hr-rag-assistant

./: README.md  pyproject.toml
chromadb/: chroma.sqlite3
data/processed/chunks/: .part-00000-68cfc4e1-181e-41bf-b622-62d1dd6cdbd1-c000.snappy.parquet.crc  .part-00001-68cfc4e1-181e-41bf-b622-62d1dd6cdbd1-c000.snappy.parquet.crc  .part-00002-68cfc4e1-181e-41bf-b622-62d1dd6cdbd1-c000.snappy.parquet.crc  .part-00003-68cfc4e1-181e-41bf-b622-62d1dd6cdbd1-c000.snappy.parquet.crc  .part-00004-68cfc4e1-181e-41bf-b622-62d1dd6cdbd1-c000.snappy.parquet.crc  part-00000-68cfc4e1-181e-41bf-b622-62d1dd6cdbd1-c000.snappy.parquet  part-00001-68cfc4e1-181e-41bf-b622-62d1dd6cdbd1-c000.snappy.parquet  part-00002-68cfc4e1-181e-41bf-b622-62d1dd6cdbd1-c000.snappy.parquet  part-00003-68cfc4e1-181e-41bf-b622-62d1dd6cdbd1-c000.snappy.parquet  part-00004-68cfc4e1-181e-41bf-b622-62d1dd6cdbd1-c000.snappy.parquet
data/raw/: ragas_questions.json  ragas_questions_short.json
src/: evaluate_rag.py  ingest.py  rag.py
