[project]
name = "hr-rag-assistant"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "drfaizyahsan",email = "dr.faizy.ahsan@gmail.com"},
]
dependencies = []
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "GPL-3.0"}


[tool.pdm]
distribution = false
