[project]
name = "hr-rag-assistant"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "drfaizyahsan",email = "dr.faizy.ahsan@gmail.com"},
]
dependencies = ["langchain>=1.3.13", "faiss-cpu>=1.14.3", "ragas>=0.4.3", "mlflow>=3.14.0", "streamlit>=1.59.2", "pypdf>=6.14.2", "python-dotenv>=1.2.2", "pyspark>=4.1.2", "ruff>=0.15.21"]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "GPL-3.0"}


[tool.pdm]
distribution = false

[tool.ruff]
line-length = 70

